--- a/doc/规范.md
+++ b/doc/规范.md
@@ -2,10 +2,10 @@
 
 #### 注释
 
-- 所有的类、抽象方法必须使用javadoc注解。
-- 所有的类变量、静态变量需要使用javadoc注解。
-- 运行使用同行注释。
+-  所有的类、抽象方法必须使用javadoc注解。
+-  所有的类变量、静态变量需要使用javadoc注解。
+-  运行使用同行注释。
 
 #### 代码顺序
 
-logger、静态变量、静态代码库、成员变量、构造方法、类方法、子类
+Logger、常量、静态变量、静态代码库、成员变量、构造方法、类方法、子类
