--- a/doc/质量检测.md
+++ b/doc/质量检测.md
@@ -6,5 +6,5 @@
 #### Sonar
 
 ```
-mvn sonar:sonar "-Dsonar.projectKey=snail" "-Dsonar.host.url=http://localhost:9000" "-Dsonar.login=f5f0398389c4cfa74912fd1b99b75442753c93d3"
+mvn sonar:sonar "-Dsonar.projectKey=snail" "-Dsonar.host.url=http://localhost:9000" "-Dsonar.login=token"
 ```
