BEncodeDecoder优化：释放资源；种子文件创建添加DHT节点；

--- a/doc/规范.md
+++ b/doc/规范.md
@@ -14,4 +14,4 @@
 
 #### 代码顺序
 
-Logger、常量、静态变量、静态代码库、成员变量、构造方法、类方法、子类
+Logger、单例、泛型、常量、静态变量、静态代码库、成员变量、构造方法、单例方法、类方法、public、protected、private、静态方法、get/set、子类
