--- a/doc/规范.md
+++ b/doc/规范.md
@@ -10,8 +10,14 @@
 
 -  所有的类、抽象方法必须使用javadoc注解。
 -  所有的类变量、静态变量需要使用javadoc注解。
--  运行使用同行注释。
+-  允许使用同行注释。
 
 #### 代码顺序
 
-Logger、单例、泛型、常量、静态变量、静态代码库、成员变量、构造方法、单例方法、类方法、public、protected、private、静态方法、get/set、子类
+Logger、单例、枚举、常量、静态变量、静态代码库、成员变量
+
+构造方法、单例方法、类方法（public、protected、private）、静态方法
+
+get/set
+
+子类
