Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,24 +1,12 @@
 ---
-name: 问题报告
-about: 问题报告
-title: "[问题]"
+name: 功能建议
+about: 功能建议
+title: "[建议]"
 labels: ''
 assignees: ''
 
 ---
 
-## 运行环境
+## 功能建议
 
-> 系统信息、软件版本
-
-## 问题描述
-
-> 详细描述问题
-
-## 重现步骤
-
-> 问题重现步骤，排除基本问题：网络异常、路由配置
-
-## 系统日志
-
-> 系统日志、错误截图
+> 详细描述
